# qlang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: example.txt  fsm.txt  parse.cpp  prod.txt  tokens.l  types.md
include/lexer/: LexException.hpp  Lexer.hpp  Lexer.tpp  Node.hpp  RegexParsing.hpp  State.hpp  StateMachine.hpp
include/parser/: IndentedStream.hpp  ParseContext.hpp  ParseException.hpp  Production.hpp  Production.tpp  Token.hpp
src/: Lexer.cpp  Lexer.hpp  Token.cpp  test.cpp
src/lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp  Lexer.tpp  Node.cpp  Node.hpp  RegexParsing.cpp  RegexParsing.hpp  State.cpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Token.cpp  Token.hpp
src/parser/: CMakeLists.txt  IndentedStream.cpp  IndentedStream.hpp  ParseContext.cpp  ParseContext.hpp  ParseContext.tpp  Production.hpp  Production.tpp  Token.cpp  Token.hpp
tests/: CMakeLists.txt  test_combined.cpp  test_lexer.cpp  test_parser.cpp  test_regex.cpp
